--- a/styles/controller.css
+++ b/styles/controller.css
@@ -8,8 +8,7 @@
 }
 
 .controller .textarea-wrapper {
-    padding: var(--unit);
-    padding-top: calc(var(--unit) / 2);
+    padding-left: var(--unit);
     height: 100%;
 }
 
@@ -30,9 +29,6 @@
     margin-right: auto;
     font-size: 1rem;
     padding: 0 var(--unit);
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
     text-align: right;
 }
 
@@ -55,6 +51,7 @@
 
 .controller.input {
     flex-grow: 1;
+    border-top: 1px solid #DDD;
 }
 
 .controller.output {
@@ -72,7 +69,7 @@
     right: 0;
     bottom: 0;
     color: #00000011;
-    font-weight: bolder;
+    font-weight: bold;
     font-size: min(10vw, 10vh);
     z-index: -1;
 }
