--- a/styles/reset.css
+++ b/styles/reset.css
@@ -8,6 +8,7 @@
 
 html, body {
     overflow: hidden;
+    height: 100%
 }
 
 body {
@@ -15,7 +16,6 @@ body {
     flex-direction: column;
     margin: 0;
     width: 100vw;
-    height: 100vh;
     position: relative;
 }
 
@@ -29,7 +29,7 @@ textarea {
     padding: 0;
     padding-right: calc(var(--unit));
     overflow-y: scroll;
-    scrollbar-width: thin;
+    /* scrollbar-width: thin; */
     cursor: default;
     font-size: 1.5rem;
 }
@@ -40,4 +40,10 @@ button {
     border: none;
     padding: 0;
     cursor: pointer;
+    font-size: 1rem;
+    color: #000;
+}
+
+button:hover {
+    box-shadow: inset 0 0 0 99999px #00000008;
 }
