--- a/styles/index.css
+++ b/styles/index.css
@@ -19,7 +19,7 @@
     align-self: flex-end;
     width: 80px;
     height: 30px;
-    border: 1px solid #DDD;
+    border: 1px solid var(--border-color);
     border-right: none;
     border-top: none;
     font-size: 1rem;
