--- a/styles/sidemenu.css
+++ b/styles/sidemenu.css
@@ -8,7 +8,7 @@
     position: absolute;
     top: 100%;
     background-color: #FFF;
-    transition: transform .5s ease-in-out;
+    transition: transform .33s ease-in-out;
     z-index: 1;
     user-select: none;
 }
@@ -16,14 +16,13 @@
 .sidemenu .count-control {
     width: 80px;
     height: 30px;
-    border: 1px solid #DDD;
+    border: 1px solid var(--border-color);
 }
 
 .sidemenu .close-sidemenu {
     width: 100%;
     height: 50px;
     flex-shrink: 0;
-    border-top: 1px solid #DDD;
 }
 
 .sidemenu .scrollable-wrapper {
