--- a/styles/sidemenu.css
+++ b/styles/sidemenu.css
@@ -54,8 +54,7 @@
     box-shadow: none;
 }
 
-.sidemenu .scrollable-wrapper .tags-section .tags-wrapper .tag.selected::before,
-.sidemenu .scrollable-wrapper .tags-section .tags-wrapper .tag:hover::before {
+.sidemenu .scrollable-wrapper .tags-section .tags-wrapper .tag.selected::before {
     content: '';
     display: block;
     position: absolute;
