--- a/styles/mods.css
+++ b/styles/mods.css
@@ -11,5 +11,5 @@
 }
 
 .with-top-border {
-    border-top: 1px solid var(--border-color);
+    border-top: var(--border-width) solid var(--border-color);
 }
