--- a/styles/reset.css
+++ b/styles/reset.css
@@ -4,11 +4,14 @@
     box-sizing: border-box;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: transparent;
+    touch-action: manipulation;
+    font-size: 1rem;
 }
 
 html, body {
     overflow: hidden;
-    height: 100%
+    height: 100%;
+    font-size: 16px;
 }
 
 body {
@@ -29,7 +32,6 @@ textarea {
     padding: 0;
     padding-right: calc(var(--unit));
     overflow-y: scroll;
-    /* scrollbar-width: thin; */
     cursor: default;
     font-size: 1.5rem;
 }
