--- a/styles/index.css
+++ b/styles/index.css
@@ -22,5 +22,6 @@
     border: var(--border-width) solid var(--border-color);
     border-right: none;
     border-top: none;
+    font-size: 1rem;
     border-bottom-left-radius: var(--radius);
 }
