--- a/styles/reset.css
+++ b/styles/reset.css
@@ -5,12 +5,13 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: transparent;
     touch-action: manipulation;
-    font-size: var(--font-size);
+    font-size: 1rem;
 }
 
 html, body {
     overflow: hidden;
     height: 100%;
+    font-size: 16px;
 }
 
 body {
@@ -32,7 +33,7 @@ textarea {
     padding-right: calc(var(--unit));
     overflow-y: scroll;
     cursor: default;
-    font-size: 1.5em;
+    font-size: 1.5rem;
 }
 
 button {
@@ -41,6 +42,7 @@ button {
     border: none;
     padding: 0;
     cursor: pointer;
+    font-size: 1rem;
     color: #000;
 }
 
