--- a/styles/reset.css
+++ b/styles/reset.css
@@ -12,6 +12,8 @@ html, body {
     overflow: hidden;
     height: 100%;
     font-size: 16px;
+    -webkit-text-size-adjust: none;
+    text-size-adjust: none;
 }
 
 body {
