fix: update border-radius on inputs

--- a/styles/reset.css
+++ b/styles/reset.css
@@ -36,6 +36,7 @@ input {
     padding-right: calc(var(--unit));
     overflow-y: scroll;
     font-size: 1.5rem;
+    border-radius: 0;
 }
 
 input {
