--- a/styles/reset.css
+++ b/styles/reset.css
@@ -53,8 +53,12 @@ input::-webkit-inner-spin-button {
     margin: 0;
 }
 
-input[type=number] {
-    -moz-appearance: textfield;
+textarea,
+input[type=number],
+input[type=text] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
 
 label {
