--- a/styles/controller.css
+++ b/styles/controller.css
@@ -39,7 +39,7 @@
     align-items: center;
     width: 80px;
     height: 30px;
-    border: var(--border-width) solid var(--border-color);
+    border: var(--border);
     border-right: none;
     border-top: none;
     font-size: 1rem;
