--- a/styles/mods.css
+++ b/styles/mods.css
@@ -10,6 +10,10 @@
     text-overflow: ellipsis;
 }
 
+.with-border {
+    border: var(--border);
+}
+
 .with-top-border {
-    border-top: var(--border-width) solid var(--border-color);
+    border-top: var(--border);
 }
