--- a/styles/reset.css
+++ b/styles/reset.css
@@ -44,7 +44,7 @@ input {
     height: auto;
     overflow: hidden;
     padding: 0;
-    border-bottom: var(--border-width) solid var(--border-color);
+    border-bottom: var(--border);
 }
 
 input::-webkit-outer-spin-button,
