--- a/styles/index.css
+++ b/styles/index.css
@@ -24,17 +24,21 @@
     margin: var(--unit) 0;
 }
 
-.counter {
+.control {
     display: inline-flex;
     flex-shrink: 0;
     justify-content: center;
     align-items: center;
     align-self: flex-end;
-    width: 80px;
+    min-width: 80px;
+    padding: 0 var(--unit);
     height: 30px;
     border: var(--border);
     border-right: none;
     border-top: none;
     font-size: 1rem;
+}
+
+.control.counter {
     border-bottom-left-radius: var(--radius);
 }
