--- a/client/styles/vars.css
+++ b/client/styles/vars.css
@@ -1,10 +1,27 @@
 :root {
+    /* units */
     --unit: 10px;
     --radius: 5px;
     --border-width: 1px;
 
-    --accent-color: #FF000077;
-    --border-color: #DDD;
+    /* colors */
+    --accent-color: 255, 0, 0, .5;
+    --border-color: 221, 221, 221;
+    --background-color: 255, 255, 255;
+    --color: 0, 0, 0;
 
-    --border: var(--border-width) solid var(--border-color);
+    /* solutions */
+    --border: var(--border-width) solid rgba(var(--border-color));
+
+    /* sidemenu */
+    --sidemenu-transition-duration: .8s;
+
+    /* font */
+    --font-size: 16px;
+    --title-font: 2rem;
+    --subtitle-font: 1.5rem;
+
+    /* layering (z-index) */
+    --sidemenu-layer: 1;
+    --max-layer: 999;
 }
