--- a/client/styles/mods.css
+++ b/client/styles/mods.css
@@ -1,7 +1,7 @@
 @import './vars.css';
 
 .warning {
-    background-color: var(--accent-color);
+    background-color: rgba(var(--accent-color));
 }
 
 .with-ellipsis {
