--- a/client/styles/reset.css
+++ b/client/styles/reset.css
@@ -3,15 +3,16 @@
 * {
     box-sizing: border-box;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: transparent;
     touch-action: manipulation;
     font-size: 1rem;
+    background-color: transparent;
+    color: rgba(var(--color));
 }
 
 html, body {
     overflow: hidden;
     height: 100%;
-    font-size: 16px;
+    font-size: var(--font-size);
     -webkit-text-size-adjust: none;
     text-size-adjust: none;
 }
@@ -32,10 +33,9 @@ input {
     outline: none;
     border: none;
     resize: none;
-    padding: 0;
-    padding-right: calc(var(--unit));
+    padding: 0 calc(var(--unit)) 0 0;
     overflow-y: scroll;
-    font-size: 1.5rem;
+    font-size: var(--subtitle-font);
     border-radius: 0;
     -webkit-border-radius: 0;
 }
@@ -62,7 +62,7 @@ input[type=text] {
 }
 
 label {
-    font-size: 1.5rem;
+    font-size: var(--subtitle-font);
 }
 
 button {
@@ -72,9 +72,22 @@ button {
     padding: 0;
     cursor: pointer;
     font-size: 1rem;
-    color: #000;
+    color: rgba(var(--color));
+    background-color: rgba(var(--background-color));
+    position: relative;
+}
+
+button::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #000;
+    z-index: -1;
 }
 
 button:hover {
-    box-shadow: inset 0 0 0 99999px #00000008;
+    background-color: rgba(var(--background-color), .95);
 }
