--- a/client/styles/sidemenu.css
+++ b/client/styles/sidemenu.css
@@ -3,13 +3,14 @@
 .sidemenu {
     display: flex;
     flex-direction: column;
-    width: 100vw;
+    width: 100%;
     height: 100%;
     position: absolute;
+    left: 0;
     top: 100%;
-    background-color: #FFF;
-    transition: transform .8s cubic-bezier(.41,.07,.4,.99);
-    z-index: 1;
+    background-color: rgba(var(--background-color));
+    transition: transform var(--sidemenu-transition-duration) cubic-bezier(.41,.07,.4,.99);
+    z-index: var(--sidemenu-layer);
     user-select: none;
 }
 
@@ -31,11 +32,11 @@
     position: relative;
 }
 
-.sidemenu .scrollable-wrapper .tags-section .tag:hover {
-    box-shadow: none;
+.sidemenu .scrollable-wrapper .tags-section .tag::before {
+    display: none;
 }
 
-.sidemenu .scrollable-wrapper .tags-section .tag.selected::before {
+.sidemenu .scrollable-wrapper .tags-section .tag.selected::after {
     content: '';
     display: block;
     position: absolute;
@@ -44,5 +45,5 @@
     width: 7px;
     height: 7px;
     border-radius: 50%;
-    background-color: var(--accent-color);
+    background-color: rgba(var(--accent-color));
 }
